Enhanced safety and clarity of API responses. getSchedule.parseSchedule now returns null for incorrect stops (including 0), performs tests for elements to achieve safer parsing. Rename 'get' endpoint to 'api', safer retrieval of args with default, use JSON-style 400 error and include status/message in all responses.

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,12 @@
 </head>
 <body onload="mixpanel.track('Page View', {'Page Name': document.title, 'URL': window.location.href})">
 	<h1>NextRide</h1>
-	<h3>Correct usage of this API:</h3>
+	<p>This is an open source application available on GitHub <a href="https://github.com/alykhank/NextRide">here</a>.</p>
+	<h2>Correct usage of this API:</h2>
 	<ul>
 		<li>
-			Access the 'get' endpoint with a stop encoded as a query parameter: http://nextride.alykhan.com/get?stop=2000
+			Access the 'api' endpoint with a stop encoded as a query parameter: <a href="http://nextride.alykhan.com/api?stop=2000">http://nextride.alykhan.com/api?stop=2000</a>
 		</li>
 	</ul>
-	<h3>This is an open source application. You should view the code on GitHub <a href="https://github.com/alykhank/NextRide">here</a>.</h3>
 </body>
 </html>
